force-app/main/default/objects/formation__c/formation__c.object-meta.xml
<CustomObject>
    <description>Gestion des certifications</description>
    <label>Formation</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>