force-app/main/default/objects/formation__c/fields/annee__c.field-meta.xml
<CustomField>
    <fullName>annee__c</fullName>
    <description>Année de la formation</description>
    <inlineHelpText>Année de la formation</inlineHelpText>
    <label>Année prévisionnelle</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>