force-app/main/default/objects/formation__c/fields/Cabinet_de_formation__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_de_formation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cabinet de formation pour la certification</description>
    <inlineHelpText>Cabinet de formation</inlineHelpText>
    <label>Organisme de formation</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Suivis_des_certifications</relationshipName>
    <type>Lookup</type>
</CustomField>