force-app/main/default/objects/formation__c/fields/chapitres__c.field-meta.xml
<CustomField>
    <fullName>chapitres__c</fullName>
    <description>Contenu de la certification</description>
    <inlineHelpText>Contenu de la certification</inlineHelpText>
    <label>chapitres</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>