force-app/main/default/objects/formation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Détails concernant cette certification</description>
    <inlineHelpText>Détails concernant cette certification</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>