force-app/main/default/objects/formation__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <description>Date de fin de la formation</description>
    <inlineHelpText>Date de fin de la formation</inlineHelpText>
    <label>Date de fin</label>
    <type>DateTime</type>
</CustomField>