force-app/main/default/objects/formation__c/fields/lien_formation__c.field-meta.xml
<CustomField>
    <fullName>lien_formation__c</fullName>
    <description>Lien des ressources. pour la   Formation</description>
    <inlineHelpText>Lien des ressources. pour la   Formation</inlineHelpText>
    <label>Lien de Formation</label>
    <type>Url</type>
</CustomField>