force-app/main/default/objects/formation__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <description>Montant de la certification</description>
    <inlineHelpText>Montant de la certification</inlineHelpText>
    <label>Montant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>