force-app/main/default/objects/formation__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <description>Date de début  de la formation</description>
    <inlineHelpText>Début  de la formation</inlineHelpText>
    <label>Date Début</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>