force-app/main/default/objects/formation__c/fields/type_de_formation__c.field-meta.xml
<CustomField>
    <fullName>type_de_formation__c</fullName>
    <defaultValue>&quot;Perfectionnement&quot;</defaultValue>
    <description>Type de la formation</description>
    <inlineHelpText>Type de la formation</inlineHelpText>
    <label>type de formation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>Perfectionnement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>