force-app/main/default/objects/formation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Montant__c</columns>
    <columns>Cabinet_de_formation__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les formations</label>
</ListView>